<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/btnConsultaActi"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades">

    <EditText
        android:id="@+id/txtAt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/txtAct4"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtAt1" />

    <EditText
        android:id="@+id/txtCodActi"
        android:layout_width="248dp"
        android:layout_height="45dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/txtAct1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNomActi"
        android:layout_width="299dp"
        android:layout_height="61dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/txtAct2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtCodActi" />

    <EditText
        android:id="@+id/txtAt1"
        android:layout_width="221dp"
        android:layout_height="44dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/txtAct3"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <EditText
        android:id="@+id/txtAt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/txtAct5"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtAt2" />

    <EditText
        android:id="@+id/txtAt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/txtAct6"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtAt3" />

    <Button
        android:id="@+id/btnGuardarActi"
        android:layout_width="96dp"
        android:layout_height="50dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="88dp"
        android:onClick="registrarActi"
        android:text="@string/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtAt4" />

    <Button
        android:id="@+id/btnModificarActi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="68dp"
        android:text="@string/btn4"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminarActi"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnGuardarActi" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="88dp"
        android:text="@string/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnGuardarActi"
        app:layout_constraintTop_toTopOf="@+id/txtAt4" />

    <Button
        android:id="@+id/btnEliminarActi"
        android:layout_width="109dp"
        android:layout_height="47dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="92dp"
        android:text="@string/btn3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="246dp"
        android:layout_height="32dp"
        android:layout_marginStart="84dp"
        android:layout_marginTop="80dp"
        android:text="@string/txtAct7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtNomActi" />
</androidx.constraintlayout.widget.ConstraintLayout>