<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtCodEstudiante"
        android:layout_width="276dp"
        android:layout_height="46dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="72dp"
        android:ems="10"
        android:hint="@string/txt1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtApellidoEstud"
        android:layout_width="286dp"
        android:layout_height="57dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="84dp"
        android:ems="10"
        android:hint="@string/txt3"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtNombreEstudiante" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="105dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="134dp"
        android:onClick="Consultar"
        android:text="@string/btn2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminar"
        app:layout_constraintStart_toStartOf="@+id/btnGuardar"
        app:layout_constraintTop_toTopOf="@+id/spinner1"
        app:layout_constraintVertical_bias="0.38" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="134dp"
        android:layout_height="23dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="112dp"
        android:text="@string/spinnet1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtApellidoEstud" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="38dp"
        android:onClick="ActCalificar"
        android:text="CALIFICAR ESTUDIANTE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsultar"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="72dp"
        android:onClick="Registrar"
        android:text="@string/btn1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinner1" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="98dp"
        android:onClick="pasarReportes"
        android:text="@string/btn3"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btnConsultar"
        app:layout_constraintTop_toTopOf="@+id/spinner1"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="319dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <EditText
        android:id="@+id/txtNombreEstudiante"
        android:layout_width="280dp"
        android:layout_height="54dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/txt2"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCodEstudiante" />

</androidx.constraintlayout.widget.ConstraintLayout>